# agentic-job-assistant

./: README.md  main.py  pyproject.toml  requirements.txt
app/agents/: job_matcher.py  match_agent.py  match_parser.py  resume_analyzer.py  resume_parser.py  test_agent.py  test_match_agent.py
app/api/: main.py  schemas.py  screening_routes.py  upload_routes.py
app/api/routes/: job_assistant.py
app/core/: file_loader.py  jd_parser.py  logger.py  matcher.py  resume_parser.py
app/graph/: intelligence_graph.py  job_graph.py  nodes.py  screening_graph.py  state.py  test_graph.py
app/orchestrator/: job_assistant.py  test_orchestrator.py
app/prompts/: match_prompt.py  resume_prompt.py
app/rag/: ingest.py  query.py  retriever.py  run_Ingestion.py  test_query.py  vectorStore.py
app/schemas/: match_schema.py  resume_analyzer.py  resume_schema.py
app/ui/: gradio_app.py  gradio_app_updated.py
data/vectorstore/: chroma.sqlite3
temp_uploads/: 5f1ed2c5-6673-4708-903a-1ab7e480d63d_JD_sample.docx  928db8c1-6e99-4c8c-853b-6c6caeca6e8e_JD2_Sample.docx
